--- a/src/Components/Navbar/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar/Navbar.css
@@ -1,9 +1,12 @@
 .navbar-container {
   width: 79rem;
+  margin: auto;
+  margin-top: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  z-index: 999;
+  position: relative;
   border-radius: 10px;
   box-shadow: 0px 10px 19px 1px rgba(15, 105, 231, 0.35);
   -webkit-box-shadow: 0px 10px 19px 1px rgba(15, 105, 231, 0.35);
@@ -19,7 +22,6 @@
 .nav-links {
   display: flex;
   gap: 3rem;
-
 }
 .nav-auth {
   display: flex;
@@ -38,15 +40,15 @@
 .navbar h1 {
   font-size: 25px;
 }
-.navbar img{
-    width: 15rem;
+.navbar img {
+  width: 15rem;
 }
 .nav-auth:first-child {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.user-details{
+.user-details {
   display: flex;
   align-items: center;
   padding: 5px;
@@ -54,8 +56,7 @@
   transition: 0.25s;
   cursor: pointer;
   gap: 2px;
-  
 }
-.user-details:hover{
-    background-color: rgba(15, 105, 231, 0.35);
+.user-details:hover {
+  background-color: rgba(15, 105, 231, 0.35);
 }
