--- a/src/Components/Navbar/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar/Navbar.css
@@ -2,6 +2,7 @@
   width: 79rem;
   margin: auto;
   margin-top: 1rem;
+  margin-bottom: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
