--- a/src/Routes/SignIn/SignIn.css
+++ b/src/Routes/SignIn/SignIn.css
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   padding: 1rem 0;
+  position: relative;
 }
 .sign-in-form input {
   height: 2.5rem;
@@ -22,8 +23,54 @@
   outline: none;
   border: none;
   background-color: #f0f6fe;
+  margin-top: 1rem;
+}
+#valid-email {
+  padding: 1rem;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  background-color: #f0f6fe;
+  transition: 0.25s;
+}
+#invalid-email {
+  padding: 1rem;
+  border-radius: 10px;
+  border: 1px solid red;
+  background-color: #f0f6fe;
+  transition: 0.25s;
+}
+.invalid-email-message {
+  color: red;
+  font-size: 12px;
+  text-align: justify;
+  margin-left: 3px;
+}
+#valid-password {
+  height: 2.5rem;
+  padding: 1rem;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  background-color: #f0f6fe;
+  width: 100%;
+}
+#invalid-password {
+  height: 2.5rem;
+  padding: 1rem;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid red;
+  background-color: #f0f6fe;
+  width: 100%;
+}
+.invalid-password-message {
+  color: red;
+  font-size: 12px;
+  max-width:28rem;
 }
 .sign-in-btn {
+  margin-top: 1rem;
   height: 2.5rem;
   padding: 1rem;
   display: flex;
@@ -38,6 +85,21 @@
   transition: 0.25s;
   font-size: 20px;
 }
+.disabled-btn{
+  margin-top: 1rem;
+  height: 2.5rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  background-color: black;
+  color: white;
+  transition: 0.25s;
+  font-size: 20px;
+}
 .sign-in-container {
   display: flex;
   flex-direction: column;
@@ -48,10 +110,9 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 .sign-in-btn:hover {
-  background-color: black;
+  background-color: rgb(194, 93, 93);
   color: white;
 }
 .sign-in a {
@@ -76,21 +137,32 @@
   border-radius: 50%;
   border: 1px solid #0f69e7;
   transition: 0.22s;
-
 }
-.github{
-    margin-left: 0.5rem; 
-    border: "1px solid black";
-    background-color: transparent;
-    outline: none;
-    border: none;
-    padding: 10px;
-    font-size: 25px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 1px solid black;
-    transition: 0.22s;
+.github {
+  margin-left: 0.5rem;
+  border: "1px solid black";
+  background-color: transparent;
+  outline: none;
+  border: none;
+  padding: 10px;
+  font-size: 25px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid black;
+  transition: 0.22s;
+}
+.password-toggle {
+  position: absolute;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  bottom: 11%;
+  left: 26rem;
+}
+
+.password-container {
+  position: relative;
 }
