--- a/src/Components/Model/Model.css
+++ b/src/Components/Model/Model.css
@@ -42,6 +42,8 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  overflow-y: scroll;
+  padding: 1.5rem;
 }
 .modal-content {
   display: flex;
@@ -70,6 +72,7 @@
   border: none;
   outline: none;
 }
-.list li{
-  list-style: circle;
+.list li {
+  list-style: disc;
 }
+
