successfully make the website full responsive added contact component

--- a/src/Routes/AddJobs/AddJobs.css
+++ b/src/Routes/AddJobs/AddJobs.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c2c9da;
+    background-color: #c7d5f7;
     padding: 1rem;
   }
   
