--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -20,7 +20,20 @@
   gap: 1rem;
   position: relative;
   z-index: 999999999;
+  /* animation-name: left;
+  animation-duration: 1s;
+  animation-timing-function: cubic-bezier(0.19, 1, 0.22, 1) \;; */
 }
+/* @keyframes left {
+  from {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+} */
 .explore-now {
   border: none;
   padding: 5px 10px;
@@ -110,7 +123,21 @@
 
 .hero-content-right {
   position: relative;
+  /* animation-name: right;
+  animation-duration: 1s;
+  animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); */
 }
+/* @keyframes right {
+  from {
+    transform: translateX(10rem);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+} */
+
 .hero-content-right img {
   z-index: 9999;
   position: relative;
@@ -203,6 +230,7 @@
   }
 }
 .hero-icons-rotate {
+  border-radius: 10px;
   width: 2rem;
   height: 2rem;
   background-color: white;
@@ -214,9 +242,7 @@
   top: 18rem;
   cursor: pointer;
   z-index: 1;
-  box-shadow: 11px 0px 25px 7px rgba(0, 0, 0, 0.19);
-  -webkit-box-shadow: 11px 0px 25px 7px rgba(0, 0, 0, 0.19);
-  -moz-box-shadow: 11px 0px 25px 7px rgba(0, 0, 0, 0.19);
+  box-shadow: 11px 0px 25px 1px rgba(0, 0, 0, 0.19);
 }
 .rotate-icon {
   font-size: 30px;
@@ -287,4 +313,64 @@
 .reputation-info-2 h1 {
   font-size: 35px;
   color: #3898e2;
+}
+#h1-2 {
+  margin-top: 2rem;
+  font-size: 50px;
+  width: 30rem;
+}
+@media screen and (max-width: 890px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+@media screen and (max-width: 450px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .hero h1 {
+    font-size: 2rem;
+    width: 19rem;
+  }
+  #h1-2 {
+    font-size: 1.5rem;
+    width: 10rem;
+  }
+  .hero-img {
+    width: 21rem;
+  }
+  .circle-1 {
+    top: 6rem;
+    left: 2rem;
+    width: 18rem;
+    height: 18rem;
+  }
+  .circle-2 {
+    top: 3rem;
+    width: 23rem;
+    height: 23rem;
+    left: -1rem;
+  }
+  .circle-3 {
+    top: 0;
+    left: -5rem;
+    width: 30rem;
+    height: 30rem;
+  }
+  .floating-2{
+    right: 1rem;
+  }
+  .reputation-info-1{
+  display: none;
+  }
+  .reputation-info-2{
+  display: none;
+  }
+.body{
+  overflow-x: hidden;
+}
 }
