--- a/src/Components/LatestJobs/LatestJobs.css
+++ b/src/Components/LatestJobs/LatestJobs.css
@@ -85,3 +85,42 @@
   margin-top: 0.3rem !important;
   padding: 0.5rem 0.5rem !important;
 }
+
+@media screen and (max-width: 1300px) {
+  single-job {
+    max-width: 150px;
+  
+  }
+  .single-job img{
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media screen and (max-width: 890px) {
+.single-job{
+  width:600px;
+}
+  .single-job img{
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+.single-job{
+display: flex;
+flex-direction: column;
+gap: 1rem;
+width: 300px;
+height: 300px;
+padding: 5px;
+}
+  .single-job img{
+    width: 70px;
+    height: 70px;
+  }
+  .salary{
+    transform: translateX(-4rem);
+  }
+}
