--- a/src/Components/Navbar/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar/Navbar.css
@@ -18,7 +18,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 6rem;
+  width: 100%;
+  padding-inline: 2rem;
 }
 .nav-links {
   display: flex;
@@ -61,7 +62,7 @@
 .user-details:hover {
   background-color: rgba(15, 105, 231, 0.35);
 }
-.logout-btn{
+.logout-btn {
   border: none;
   background-color: transparent;
   font-size: 16px;
@@ -70,6 +71,68 @@
   cursor: pointer;
   transition: 0.25s;
 }
-.logout-btn:hover{
-  background-color:#c9d4e6;
+.logout-btn:hover {
+  background-color: #c9d4e6;
+}
+.nav-hamburger {
+  display: none;
+}
+
+.nav-links.active {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 880px) {
+  .nav-hamburger {
+    display: block;
+  }
+  .nav-auth {
+    display: none;
+  }
+
+  .nav-links {
+    display: none;
+  }
+  .navbar-container {
+    width: 90%;
+  }
+  .newNavBar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    a {
+      color: #415977;
+      transition: 0.25s;
+    }
+    a:hover {
+      color: #0f69e7;
+    }
+    text-align: center;
+  }
+  .active-auth {
+    display: flex;
+    flex-direction: column;
+    margin: 25px 0;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .navbar-container {
+    width: 90%;
+  }
+
+  .navbar {
+    gap: 1rem;
+  }
+  .newNavBar {
+    .nav-h1 {
+      display: block;
+    }
+    .nav-h1 img {
+      width: 20rem;
+    }
+  }
 }
