--- a/src/Routes/Applied/Applied.css
+++ b/src/Routes/Applied/Applied.css
@@ -13,3 +13,8 @@
   align-items: center;
   justify-content: center;
 }
+@media screen and (max-width: 480px){
+  .job-search{
+     width: 19rem;
+  }
+}
