--- a/src/Routes/Contact/Contact.css
+++ b/src/Routes/Contact/Contact.css
@@ -4,16 +4,25 @@
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #e0e0e0;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: white;
+  box-shadow: 0px 0px 30px 0px rgba(15, 105, 231, 0.59);
+  -webkit-box-shadow: 0px 0px 30px 0px rgba(15, 105, 231, 0.59);
+  -moz-box-shadow: 0px 0px 30px 0px rgba(15, 105, 231, 0.59);
+  margin-bottom: 1rem;
+  
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
 }
-
+#name,#email,#message{
+    border-radius: 15px;
+    border: none;
+    padding: 5px;
+    background-color: #f0f6fe;
+}
 .form-group {
   margin-bottom: 20px;
 }
