--- a/src/Routes/AddJobs/AddJobs.css
+++ b/src/Routes/AddJobs/AddJobs.css
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c7d5f7;
     padding: 1rem;
   }
   
@@ -13,10 +12,12 @@
     padding: 30px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0px 0px 30px 0px rgba(15, 105, 231, 0.59);
+    -webkit-box-shadow: 0px 0px 30px 0px rgba(15, 105, 231, 0.59);
+    -moz-box-shadow: 0px 0px 30px 0px rgba(15, 105, 231, 0.59);
+
   }
-  
+
 
   .form-group {
     margin-bottom: 25px;
@@ -28,15 +29,17 @@
     margin-bottom: 8px;
     font-weight: bold;
   }
-  
+
   input[type="text"],
   textarea {
     width: calc(100% - 12px);
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 15px;
     resize: none;
     transition: border-color 0.3s; 
+    border: none;
+    padding: 5px;
+    background-color: #f0f6fe;
   }
   
   input[type="text"]:focus,
