--- a/src/Components/Loading/Loading.css
+++ b/src/Components/Loading/Loading.css
@@ -1,7 +1,10 @@
 .loading{
 position: absolute;
-right: 50%;
-top: 50%;
-transform:translate( 50% -50%);
-
+/* right: 50%;
+top: 50%; */
+/* transform:translate( 50% -50%); */
+width: 100vw;
+height: 70vw;
+background-color: white;
+text-align: center;
 }
